# aula_08

./: README.md  dados.csv  dados.parquet  etl.py  pipeline.py  pyproject.toml
